# NaturalNets

./: .gitignore  Best_Genome.npy  CITATION.cff  CalculateMetricsOverGlobalSeeds.ipynb  CreateEvaluationPlots.ipynb  LICENSE  MANIFEST.in  README.md  Stop_Optimization.json  batch_train.py  continuous_time_rnn.py  create_pivot_table.py  dummy_app_hp_tuning.py  episode_runner.py  generate_plots.py  monkey_tester.py  pyproject.toml  requirements.txt  results_to_csv.py  run_app.py  run_app.sh  run_app_interactive_mode.py  sample.py  sample_anki_app.py  sample_button_grid.py  sample_challenger_nn.py  sample_gui_app.py  setup.py  t_mask.npy  test.txt  test_app_time.py  train.py  train_autoencoder.py  v_mask.npy  visualization.py  visualization_autoencoder.py  w_mask.npy
autoencoder/: BaseAutoencoder.py  Conv_Unpool.pt  conv_unpool.py  custom_layer.py  plot_experiment.py
brains/: __init__.py  continuous_time_rnn.py  elman.py  feed_forward_nn.py  gru.py  i_brain.py  i_layer_based_brain.py  indirect_encoded_ctrnn.py  lstm.py
configurations/: CMA_ES_Deap_CTRNN_Dense.json  CMA_ES_Deap_CTRNN_Sparse.json  CMA_ES_Deap_CTRNN_Sparse_AutoEncoder.json  CMA_ES_Deap_FFNN.json  CMA_ES_Deap_FFNN_Sparse.json  CMA_ES_Deap_Indirect_CTRNN.json  CMA_ES_Pycma_CTRNN_Sparse.json  Canonical_ES_CTRNN_Sparse.json  Configuration.json  Configuration_DesignSpace.json  Configuration_designSpace.json  ID02_Mujoco_CMA-ES_Multiple_Brains_HP_Tuning.json  ID03_Mujoco_CMA-ES_Multiple_Brains.json  ID04_Mujoco_CMA-ES_full_Multiple_Brains_HP_Tuning.json  ID05_CollectPoints_CMA-ES_Multiple_Brains_HP_Tuning.json  (+3 more)
(+7676 files in other folders)
